--- a/Minesweeper/Base.lproj/Main.storyboard
+++ b/Minesweeper/Base.lproj/Main.storyboard
@@ -343,27 +343,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQE-1q-aX2" userLabel="Menu Button">
-                                <rect key="frame" x="50" y="502.5" width="220" height="45.5"/>
-                                <color key="backgroundColor" red="0.73333333329999995" green="0.72941176470000002" blue="0.73333333329999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <inset key="contentEdgeInsets" minX="10" minY="5" maxX="10" maxY="5"/>
-                                <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
-                                <inset key="imageEdgeInsets" minX="-20" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="Return to Menu" image="icons8-home-24">
-                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <integer key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oY3-kw-vGt" userLabel="Header View">
+                                <rect key="frame" x="0.0" y="20" width="320" height="68"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="hwf-Ox-kk0">
+                                        <rect key="frame" x="235" y="10" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="09C-W0-1SE"/>
+                                            <constraint firstAttribute="height" constant="50" id="d5C-Qp-JsP"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best Times" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfG-Bw-JBT">
+                                        <rect key="frame" x="100.5" y="19" width="119.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="BwQ-XB-xQY">
+                                        <rect key="frame" x="35.5" y="10" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="oJz-nF-YGf"/>
+                                            <constraint firstAttribute="height" constant="50" id="zeG-14-4VM"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.65000000000000002" green="0.65000000000000002" blue="0.65000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="hwf-Ox-kk0" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="top" constant="10" id="Nr4-wq-csm"/>
+                                    <constraint firstItem="BwQ-XB-xQY" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="top" constant="10" id="QEQ-7K-Rfp"/>
+                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="leading" secondItem="BwQ-XB-xQY" secondAttribute="trailing" constant="15" id="Uw1-vh-2HS"/>
+                                    <constraint firstItem="hwf-Ox-kk0" firstAttribute="leading" secondItem="mfG-Bw-JBT" secondAttribute="trailing" constant="15" id="Z2w-8Q-K0D"/>
+                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="centerY" secondItem="oY3-kw-vGt" secondAttribute="centerY" id="hc8-Mt-T71"/>
+                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="centerX" secondItem="oY3-kw-vGt" secondAttribute="centerX" id="lFh-V5-Ugt"/>
+                                </constraints>
+                            </view>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MqD-SQ-do3">
+                                <rect key="frame" x="0.0" y="88" width="320" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="RN7-YY-RSY"/>
+                                </constraints>
                                 <connections>
-                                    <action selector="homeButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ai5-bJ-yEb"/>
-                                    <action selector="menuButtonPressed:" destination="H2L-aF-44V" eventType="touchUpInside" id="yIl-1X-EKu"/>
+                                    <outlet property="dataSource" destination="H2L-aF-44V" id="86Q-vF-Ul5"/>
+                                    <outlet property="delegate" destination="H2L-aF-44V" id="gOO-Es-33D"/>
                                 </connections>
-                            </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bH3-2z-75n" userLabel="Table View Header">
-                                <rect key="frame" x="0.0" y="145" width="320" height="30"/>
+                            </pickerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bH3-2z-75n" userLabel="Table View Header Cell">
+                                <rect key="frame" x="0.0" y="158" width="320" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6G-d1-RvX">
                                         <rect key="frame" x="0.0" y="0.0" width="106.5" height="30"/>
@@ -434,42 +459,8 @@
                                     <constraint firstItem="1pe-1b-xYb" firstAttribute="centerY" secondItem="bH3-2z-75n" secondAttribute="centerY" id="wMN-fw-6NX"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oY3-kw-vGt" userLabel="Header View">
-                                <rect key="frame" x="0.0" y="20" width="320" height="85"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="hwf-Ox-kk0">
-                                        <rect key="frame" x="235" y="15" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="09C-W0-1SE"/>
-                                            <constraint firstAttribute="height" constant="50" id="d5C-Qp-JsP"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best Times" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfG-Bw-JBT">
-                                        <rect key="frame" x="100.5" y="27.5" width="119.5" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                        <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="BwQ-XB-xQY">
-                                        <rect key="frame" x="35.5" y="15" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="oJz-nF-YGf"/>
-                                            <constraint firstAttribute="height" constant="50" id="zeG-14-4VM"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.65000000000000002" green="0.65000000000000002" blue="0.65000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="hwf-Ox-kk0" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="top" constant="15" id="Nr4-wq-csm"/>
-                                    <constraint firstItem="BwQ-XB-xQY" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="top" constant="15" id="QEQ-7K-Rfp"/>
-                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="leading" secondItem="BwQ-XB-xQY" secondAttribute="trailing" constant="15" id="Uw1-vh-2HS"/>
-                                    <constraint firstItem="hwf-Ox-kk0" firstAttribute="leading" secondItem="mfG-Bw-JBT" secondAttribute="trailing" constant="15" id="Z2w-8Q-K0D"/>
-                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="centerY" secondItem="oY3-kw-vGt" secondAttribute="centerY" id="hc8-Mt-T71"/>
-                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="centerX" secondItem="oY3-kw-vGt" secondAttribute="centerX" id="lFh-V5-Ugt"/>
-                                </constraints>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nBh-3s-7mR">
-                                <rect key="frame" x="0.0" y="175" width="320" height="307.5"/>
+                                <rect key="frame" x="0.0" y="188" width="320" height="294.5"/>
                                 <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BestTimesTableViewCell" rowHeight="30" id="xe3-zC-oTM" customClass="BestTimesTableViewCell" customModule="Minesweeper" customModuleProvider="target">
@@ -533,19 +524,41 @@
                                     <outlet property="delegate" destination="H2L-aF-44V" id="IpY-id-4QM"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQE-1q-aX2" userLabel="Menu Button">
+                                <rect key="frame" x="50" y="502.5" width="220" height="45.5"/>
+                                <color key="backgroundColor" red="0.73333333329999995" green="0.72941176470000002" blue="0.73333333329999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="5" maxX="10" maxY="5"/>
+                                <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="-20" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Return to Menu" image="icons8-home-24">
+                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="homeButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ai5-bJ-yEb"/>
+                                    <action selector="menuButtonPressed:" destination="H2L-aF-44V" eventType="touchUpInside" id="yIl-1X-EKu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="qQE-1q-aX2" secondAttribute="trailing" constant="50" id="1d0-W6-QdP"/>
                             <constraint firstItem="qQE-1q-aX2" firstAttribute="top" secondItem="nBh-3s-7mR" secondAttribute="bottom" constant="20" id="71d-Nz-JDJ"/>
+                            <constraint firstItem="MqD-SQ-do3" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="bottom" id="FQ5-TS-UXG"/>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="oY3-kw-vGt" secondAttribute="trailing" id="Jnb-dk-JAu"/>
-                            <constraint firstItem="oY3-kw-vGt" firstAttribute="height" secondItem="BrY-Mv-jOm" secondAttribute="height" multiplier="0.15" id="N5G-pL-aD9"/>
+                            <constraint firstItem="oY3-kw-vGt" firstAttribute="height" secondItem="BrY-Mv-jOm" secondAttribute="height" multiplier="0.12" id="N5G-pL-aD9"/>
                             <constraint firstItem="oY3-kw-vGt" firstAttribute="top" secondItem="AcU-H8-q71" secondAttribute="top" id="NHm-MZ-PNm"/>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="bottom" secondItem="qQE-1q-aX2" secondAttribute="bottom" constant="20" id="SKR-Wg-JSB"/>
                             <constraint firstAttribute="trailing" secondItem="nBh-3s-7mR" secondAttribute="trailing" id="Swo-aR-BdM"/>
+                            <constraint firstItem="MqD-SQ-do3" firstAttribute="trailing" secondItem="AcU-H8-q71" secondAttribute="trailing" id="VxK-lF-GbL"/>
+                            <constraint firstItem="MqD-SQ-do3" firstAttribute="bottom" secondItem="bH3-2z-75n" secondAttribute="top" id="WBG-un-yOU"/>
                             <constraint firstItem="bH3-2z-75n" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" id="Xm4-hL-Xck"/>
-                            <constraint firstItem="bH3-2z-75n" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="bottom" constant="40" id="a3z-Q4-WzF"/>
                             <constraint firstItem="qQE-1q-aX2" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" constant="50" id="byn-U4-pcO"/>
+                            <constraint firstItem="MqD-SQ-do3" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" id="dH6-7P-cxq"/>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="bH3-2z-75n" secondAttribute="trailing" id="nbr-x8-Yip"/>
                             <constraint firstItem="qQE-1q-aX2" firstAttribute="height" secondItem="BrY-Mv-jOm" secondAttribute="height" multiplier="0.08" id="oEB-4h-vT6"/>
                             <constraint firstItem="nBh-3s-7mR" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" id="rMb-xC-bwa"/>
@@ -557,6 +570,7 @@
                     <connections>
                         <outlet property="bestTimesTableView" destination="nBh-3s-7mR" id="M8F-28-cA7"/>
                         <outlet property="menuButton" destination="qQE-1q-aX2" id="nne-Sy-An0"/>
+                        <outlet property="pickerView" destination="MqD-SQ-do3" id="U3i-gW-C3e"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ldZ-cS-nnT" userLabel="First Responder" sceneMemberID="firstResponder"/>
