--- a/Minesweeper/Base.lproj/Main.storyboard
+++ b/Minesweeper/Base.lproj/Main.storyboard
@@ -170,11 +170,11 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="113.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7jV-qo-EUk" userLabel="Close Button">
-                                        <rect key="frame" x="8" y="8" width="14" height="14"/>
+                                        <rect key="frame" x="8" y="8" width="16" height="16"/>
                                         <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="14" id="l4G-2C-fvb"/>
-                                            <constraint firstAttribute="height" constant="14" id="wMr-qn-jqK"/>
+                                            <constraint firstAttribute="width" constant="16" id="l4G-2C-fvb"/>
+                                            <constraint firstAttribute="height" constant="16" id="wMr-qn-jqK"/>
                                         </constraints>
                                         <state key="normal" image="close">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -347,11 +347,11 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="85"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQE-1q-aX2" userLabel="Close Button">
-                                        <rect key="frame" x="8" y="8" width="14" height="14"/>
+                                        <rect key="frame" x="8" y="8" width="16" height="16"/>
                                         <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="14" id="Jqd-SD-iey"/>
-                                            <constraint firstAttribute="height" constant="14" id="Uyr-WA-1K1"/>
+                                            <constraint firstAttribute="width" constant="16" id="Jqd-SD-iey"/>
+                                            <constraint firstAttribute="height" constant="16" id="Uyr-WA-1K1"/>
                                         </constraints>
                                         <state key="normal" image="close">
                                             <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -585,6 +585,6 @@
         <image name="mine-icon-black-50" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3h4-bT-W5l"/>
+        <segue reference="2P6-Xe-YUS"/>
     </inferredMetricsTieBreakers>
 </document>
