--- a/Minesweeper/Views/Base.lproj/Main.storyboard
+++ b/Minesweeper/Views/Base.lproj/Main.storyboard
@@ -320,7 +320,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nBh-3s-7mR">
-                                <rect key="frame" x="0.0" y="44" width="320" height="454"/>
+                                <rect key="frame" x="0.0" y="116" width="320" height="452"/>
                                 <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BestTimesTableViewCell" rowHeight="30" id="xe3-zC-oTM" customClass="BestTimesTableViewCell" customModule="Minesweeper" customModuleProvider="target">
@@ -385,7 +385,7 @@
                                 </connections>
                             </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="V0N-mb-mx3" userLabel="Difficulty Selector">
-                                <rect key="frame" x="0.0" y="498" width="320" height="71"/>
+                                <rect key="frame" x="0.0" y="44" width="320" height="71"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="Cgn-K1-j5t"/>
@@ -399,13 +399,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="V0N-mb-mx3" firstAttribute="top" secondItem="nBh-3s-7mR" secondAttribute="bottom" id="CoY-ZR-tzh"/>
                             <constraint firstAttribute="trailing" secondItem="nBh-3s-7mR" secondAttribute="trailing" id="Swo-aR-BdM"/>
-                            <constraint firstItem="nBh-3s-7mR" firstAttribute="top" secondItem="AcU-H8-q71" secondAttribute="top" id="XZq-0O-5mW"/>
+                            <constraint firstItem="AcU-H8-q71" firstAttribute="bottom" secondItem="nBh-3s-7mR" secondAttribute="bottom" id="fPK-hb-0iq"/>
+                            <constraint firstItem="V0N-mb-mx3" firstAttribute="top" secondItem="AcU-H8-q71" secondAttribute="top" id="hqN-aW-1J0"/>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="V0N-mb-mx3" secondAttribute="trailing" id="jnt-Kg-Tv5"/>
                             <constraint firstItem="V0N-mb-mx3" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" id="lmv-FU-NSk"/>
+                            <constraint firstItem="nBh-3s-7mR" firstAttribute="top" secondItem="V0N-mb-mx3" secondAttribute="bottom" constant="2" id="qim-GQ-tFJ"/>
                             <constraint firstItem="nBh-3s-7mR" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" id="rMb-xC-bwa"/>
-                            <constraint firstItem="AcU-H8-q71" firstAttribute="bottom" secondItem="V0N-mb-mx3" secondAttribute="bottom" id="zNf-Ok-jJL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="AcU-H8-q71"/>
                     </view>
